readme and examples update

--- a/src/R/pcgrr2/inst/templates/tier5.Rmd
+++ b/src/R/pcgrr2/inst/templates/tier5.Rmd
@@ -1,7 +1,10 @@
 
 ```{r tier5, echo=F}
 
-myOptions <- list(paging = T,pageLength=10, searching=T,caching=F,DT.warn.size=F)
+myOptions <- list(paging = F,pageLength=10, searching=T,caching=F)
+if(nrow(report_data$variants_tier5_display) > 10){
+  myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+}
 DT::datatable(report_data$variants_tier5_display, options = myOptions, escape=F, extensions = "Responsive")
 
 ```
