--- a/src/R/pcgrr2/inst/templates/cnv_report_segments_nondiploid.Rmd
+++ b/src/R/pcgrr2/inst/templates/cnv_report_segments_nondiploid.Rmd
@@ -1,6 +1,6 @@
 ## Somatic CNA analysis
 
-### All copy-number segments (non-diploid state)
+### Segments - amplifications and homozygous deletions
 <br>
 ```{r cna_segments_nondiploid, echo=F}
 myOptions <- list(paging = T,pageLength=20, searching=T,caching=F)
