--- a/src/R/pcgrr2/inst/templates/tier2.Rmd
+++ b/src/R/pcgrr2/inst/templates/tier2.Rmd
@@ -1,7 +1,10 @@
 
 ```{r tier2, echo=F}
 
-myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+myOptions <- list(paging = F,pageLength=10, searching=T,caching=F)
+if(nrow(report_data$variants_tier2_display) > 10){
+  myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+}
 DT::datatable(report_data$variants_tier2_display, options = myOptions, escape=F, extensions = "Responsive")
 
 ```
