--- a/src/R/pcgrr2/inst/templates/tier3.Rmd
+++ b/src/R/pcgrr2/inst/templates/tier3.Rmd
@@ -1,8 +1,10 @@
 
 
 ```{r tier3, echo=F}
-
-myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+myOptions <- list(paging = F,pageLength=10, searching=T,caching=F)
+if(nrow(report_data$variants_tier3_display) > 10){
+  myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+}
 DT::datatable(report_data$variants_tier3_display, options = myOptions, escape=F, extensions = "Responsive")
 
 ```
