--- a/src/R/pcgrr2/inst/templates/tier1.Rmd
+++ b/src/R/pcgrr2/inst/templates/tier1.Rmd
@@ -7,8 +7,11 @@ The table below lists all variant-evidence item associations:
 ```{r tier1A, echo=F}
 
 if(nrow(report_data$clinical_evidence_items_tier1A) > 0){
-  myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
   
+  myOptions <- list(paging = F, searching=T,caching=F)
+  if(nrow(report_data$clinical_evidence_items_tier1A) > 10){
+    myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+  }
   DT::datatable(report_data$clinical_evidence_items_tier1A, options = myOptions, escape=F, extensions = "Responsive") %>%
   DT::formatStyle('EVIDENCE_LEVEL', backgroundColor = DT::styleEqual(c('A: Validated','B: Clinical evidence','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#56B4E9", "#0072B2","#E69F00", "#F0E442")))
 }
@@ -21,7 +24,11 @@ The table below lists all variant-evidence item associations:
 ```{r tier1B, echo=F}
 
 if(nrow(report_data$clinical_evidence_items_tier1B) > 0){
-  myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+  myOptions <- list(paging = F, searching=T,caching=F)
+  if(nrow(report_data$clinical_evidence_items_tier1B) > 10){
+    myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+  }
+  #myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
 
   DT::datatable(report_data$clinical_evidence_items_tier1B, options = myOptions, escape=F, extensions = "Responsive") %>%
   DT::formatStyle('EVIDENCE_LEVEL', backgroundColor = DT::styleEqual(c('A: Validated','B: Clinical evidence','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#56B4E9", "#0072B2","#E69F00", "#F0E442")))
@@ -35,7 +42,11 @@ The table below lists all variant-evidence item associations:
 ```{r tier1C, echo=F}
 
 if(nrow(report_data$clinical_evidence_items_tier1C) > 0){
-  myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+  myOptions <- list(paging = F, searching=T,caching=F)
+  if(nrow(report_data$clinical_evidence_items_tier1C) > 10){
+    myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
+  }
+  #myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
 
   DT::datatable(report_data$clinical_evidence_items_tier1C, options = myOptions, escape=F, extensions = "Responsive") %>%
   DT::formatStyle('EVIDENCE_LEVEL', backgroundColor = DT::styleEqual(c('A: Validated','B: Clinical evidence','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#56B4E9", "#0072B2","#E69F00", "#F0E442")))
