--- a/src/R/pcgrr2/inst/templates/tier4.Rmd
+++ b/src/R/pcgrr2/inst/templates/tier4.Rmd
@@ -1,6 +1,6 @@
 ### Tier 4 - other coding mutations
 
-- A total of __`r nrow(report_data$variants_tier4_display)`__ unique, somatic variant(s) are also found in the tumor sample:
+- A total of __`r nrow(report_data$variants_tier4_display)`__ unique, coding somatic variant(s) are also found in the tumor sample.
 
 <br><br>
 ```{r tier4, echo=F}
@@ -9,7 +9,9 @@ myOptions <- list(paging = F,pageLength=10, searching=T,caching=F)
 if(nrow(report_data$variants_tier4_display) > 10){
   myOptions <- list(paging = T,pageLength=10, searching=T,caching=F)
 }
-DT::datatable(report_data$variants_tier4_display, options = myOptions, escape=F, extensions = "Responsive")
+if(nrow(report_data$variants_tier4_display) > 0){
+  DT::datatable(report_data$variants_tier4_display, options = myOptions, escape=F, extensions = "Responsive")
+}
 
 ```
 <br><br>
